--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -4,38 +4,59 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Highcharts Example</title>
         <!-- Button for testing bands-->
-        <div id="container" style="height: 400px"></div>
+        <div id="container" style="height: 250px"></div>
         <button id="button" class="autocompare">Add plot band</button>
-        
+
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script type="text/javascript">
 $(function () {
     $('#container').highcharts({
-        chart: {
-            zoomType: 'xy'
-        },
         title: {
-            text: 'Endowment Returns'
+            text: 'Endowment Returns',
+            margin: -50
         },
-        xAxis:  {               
+        xAxis:  { 
+            labels: {
+                x: 0,
+                y: 12
+            },
+            tickPosition: 'inside',
+            tickmarkPlacement: 'on',   
+            tickInterval: 1,    
+            startOnTick: true,       
             categories: ['1996','1997','1998','1999','2000','2001','2002','2003','2004','2005','2006','2007','2008','2009','2010','2011','2012','2013']},
         yAxis: [{ // Primary yAxis
             labels: {
                 style: {
-                    color: Highcharts.getOptions().colors[1]
+                    color: '#000'
                 }
             },
+            ceiling: 30,
+            floor: -30,
+            max: 31,
+            tickInterval: 10,
+            gridLineColor:'#FFF',
             title: {
                 text: 'Yearly Returns',
                 style: {
-                    color: Highcharts.getOptions().colors[1]
+                    color: '#000'
                 }
             }
 
         }], 
+        legend: {
+            align: 'right',
+            verticalAlign: 'top',
+            floating: true,
+            layout: 'vertical',
+            itemWidth: 80,
+            x: 0,
+            y: 120
+        },
+
         series: [{
             type: 'area',
-            name: 'Difference (Harvard - NACUBO ave.)',
+            name: 'Difference',
             data: [8.8,5.4,2.5,1.2,17,0.9,5.5,9.5,6,5.9,6,5.8,11.6,-8.6,-0.9,2.2,0.25,-0.4],
             negativeColor: '#FF0000',
             color: '#02c326',
@@ -57,7 +78,7 @@ $(function () {
 
         }, {
             type: 'line',
-            name: 'NACUBO ave.',
+            name: 'NACUBO',
             data: [17.2,20.4,18,11,13,-3.6,-6,3,15.1,9.3,10.7,17.2,-3,-18.7,11.9,19.2,-0.3,11.7],
             marker: {
                     enabled: false
@@ -65,6 +86,7 @@ $(function () {
             color: '#000'
         }],
     });
+
     // the button action
     var hasPlotBand = false,
         chart = $('#container').highcharts(),
@@ -72,16 +94,22 @@ $(function () {
     
     $button.click(function() {
         if (!hasPlotBand) {
+            chart.xAxis[0].removePlotBand('plot-band-2');
             chart.xAxis[0].addPlotBand({
-                from: 5.5,
-                to: 7.5,
+                from: 1,
+                to: 6,
                 color: '#FCFFC5',
                 id: 'plot-band-1'
             });
-            $button.html('Remove plot band');
+            $button.html('Toggle plot band');
         } else {
             chart.xAxis[0].removePlotBand('plot-band-1');
-            $button.html('Add plot band');
+            chart.xAxis[0].addPlotBand({
+                from: 7,
+                to: 8,
+                color: '#FCFFC5',
+                id: 'plot-band-2'
+            });
         }
         hasPlotBand = !hasPlotBand;
     });
