--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -13,7 +13,21 @@
     <div id="container" ></div>
 
     <div id="article" class="white">
-                  <div id="header" class="intro type-target"><a target="_blank" href="http://www.thecrimson.com"><span class="text">The Harvard Crimson</span></a></div>
+        <header>
+            <div class="wrapper">
+                <a class="header-logo" href="http://www.thecrimson.com/">
+                    <img src="../assets/img/logo.png" height="18" width="215">
+                </a>
+                <ul class="header-nav">
+                    <a href="#featured"><li>Featured</li></a>
+                    <a href="#levity"><li>Levity</li></a>
+                    <a href="#around-town"><li>Around Town</li></a>
+                    <a href="#conversations"><li>Conversations</li></a>
+                    <a href="#Endpapers"><li>Endpapers</li></a>
+                    <a href="#editors-note"><li>Editors&rsquo; Note</li></a>
+                </ul>
+            </div>
+        </header>
                 <h1 class="bebas">Harvard Management Corporation</h1>
 
                 <p class="byline bebas">BY <a target="_blank" href="http://www.thecrimson.com/writer/1209893/Dev_A._Patel/">DEV A. PATEL</a> AND <a target="_blank" href="http://www.thecrimson.com/writer/1208207/Samuel_Y._Weinstock/">SAMUEL Y. WEINSTOCK</a></p>
