added some stuff

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>HMC: Divesting from nothing since 1636</title>
 
@@ -13,6 +14,7 @@
     <div id="container" ></div>
 
     <div id="article" class="white">
+        
         <header>
             <div class="wrapper">
                 <a class="header-logo" href="http://www.thecrimson.com/">
@@ -28,9 +30,11 @@
                 </ul>
             </div>
         </header>
-                <h1 class="bebas">Harvard Management Corporation</h1>
+        <div id="article-header">   
+            <h1 class="pt-serif">Harvard Management Corporation</h1>
 
-                <p class="byline bebas">BY <a target="_blank" href="http://www.thecrimson.com/writer/1209893/Dev_A._Patel/">DEV A. PATEL</a> AND <a target="_blank" href="http://www.thecrimson.com/writer/1208207/Samuel_Y._Weinstock/">SAMUEL Y. WEINSTOCK</a></p>
+            <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209893/Dev_A._Patel/">DEV A. PATEL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1208207/Samuel_Y._Weinstock/">SAMUEL Y. WEINSTOCK</a></p>
+        </div>
                 <div id="article-contents">
                     <section>
                         <p>A high school student submits an application to Harvard. An undergraduate at the College receives a prescription from Mental Health Services. A professor collects data on nuclear power for a research project funded by the Department of Energy. All of this information is recorded electronically and stored on Harvard University&#39;s computers and servers.</p>
@@ -43,7 +47,7 @@
                         <p>And while governments and corporations alike experience similar cyber threats, universities like Harvard face a unique test: how to balance an academic mission demanding an unfettered flow of information with the need to protect valuable data and computer systems. As the problem of internet attacks grows more formidable, the University will have to decide where to draw the line between securing the system and preserving an open campus.</p>
                     </section>
                     <section>
-                        <h2 class="bebas">UNDER ATTACK</h2>
+                        <h2 class="pt-serif">UNDER ATTACK</h2>
                         <p>One morning in September 2011, as high school seniors began thinking about their college plans, visitors to Harvard&#39;s website were greeted not with images of professors or students participating in community service projects, but rather a photograph of Syria&#39;s President Bashar al-Assad. The Syrian Electronic Army, a group of hackers that has gained notoriety by defacing prominent websites to show support for the Syrian government, had altered the University&#39;s website, so that it read &ldquo;Syrian Electronic Army Were Here,&rdquo; and displayed al-Assad&#39;s image.</p>
                         <p>While this particular incident may be no more than a minor embarrassment, it&#39;s a reminder of the constant attacks on the Harvard technology system, the number of which has been skyrocketing in recent years.</p>
                         <p>The first computer worm, created by a Cornell student and released from MIT in 1988, caused
@@ -120,7 +124,7 @@
                         <p>Whether or not critical information has been taken from Harvard, people have undoubtedly tried. The goals of cyberattacks here vary as widely as their origins: stealing Social Security numbers, to hijacking Harvard&#39;s massive servers and bandwidth, to accessing research that could one day yield lucrative patents.</p>
                     </section>
                     <section>
-                        <h2 class="bebas">ON THE DEFENSIVE</h2>
+                        <h2 class="pt-serif">ON THE DEFENSIVE</h2>
                         <p>On the bustling, colorful streets of Harvard Square, the offices above Bank of America on Mass. Ave. are remarkably nondescript. With not a marker in sight other than the 1414 above the door, you have to know where you&#39;re going in order to end up there. But though HUIT&#39;s office lacks the grandeur typical of Harvard&#39;s campus, what goes on inside is nothing short of vital to Harvard&#39;s operations.</p>
                         <p>Of HUIT&#39;s 600 full time employees, 11 work within its information security department. Hamer and his team are assigned to secure information systems in the Faculty of Arts and Sciences, Harvard&#39;s central administration, and the Medical School, Dental School, and Divinity School, said HUIT spokesperson Kevin Donovan. The University&#39;s other schools handle their own IT security.</p>
                         <p>In the complex and covert world of hacking, with little information known about the hackers themselves and what they&#39;re after, it seems fitting that the University&#39;s security force is also an enigma. Hamer refused to give specifics on virtually any aspect of the University&#39;s cyberdefenses.</p>
@@ -146,7 +150,7 @@
                         <p>Unlike the government or a typical privatesector company, Harvard&#39;s interest in fostering an open, educational environment make HUIT&#39;s job even more tricky to navigate.</p>
                     </section>
                     <section>
-                        <h2 class="bebas">PICKING BATTLES</h2>
+                        <h2 class="pt-serif">PICKING BATTLES</h2>
                         <p>Sitting in his second-floor office of the Maxwell Dworkin building, in the heart of Harvard&#39;s School of Engineering and Applied Sciences, Morrisett pointed across his office to the large Apple computer sitting on his desk.</p>
                         <p>&ldquo;It could get hacked, I&#39;m sure, pretty easily,&rdquo; said the chair of the Harvard Faculty of Arts and Sciences Standing Committee on IT, who is also a member of Microsoft&#39;s Research Technical Advisory Board, as well as the Intel/Berkeley Science and Technology Center for Secure Computing Advising Board.</p>
                         <p>Morrisett, perhaps unsurpassed in cyber-security expertise at Harvard, recognized &ldquo;the futility of modern firewalls and other kinds of border defenses.&rdquo; He noted that a hypothetical targeted attack by the Chinese or the National Security Agency, for instance, could easily access his machine.</p>
