pulling any changes before continuing

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -31,9 +31,9 @@
             </div>
         </header>
         <div id="article-header">   
-            <h1 class="pt-serif">Harvard Management Corporation</h1>
+            <h1 class="pt-serif">Has HMC Lost Its Edge?</h1>
 
-            <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209893/Dev_A._Patel/">DEV A. PATEL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1208207/Samuel_Y._Weinstock/">SAMUEL Y. WEINSTOCK</a></p>
+            <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">CHRISTINE Y. CAHILL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">MATTHEW Q. CLARIDA</a></p>
         </div>
                 <div id="article-contents">
                     <section>
