lol look at it it's not done

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container" ></div>
 
-    <div id="article" class="white">
+    <div id="article">
         
         <header>
             <div class="wrapper">
@@ -36,7 +36,7 @@
             <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">CHRISTINE Y. CAHILL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">MATTHEW Q. CLARIDA</a></p>
             <div id='header-image'></div>
         </div>
-                <div id="article-contents">
+                <div id="article-contents" class="white">
                     <section>
                         <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors. </p>
                         <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the largest gift announced so far in the University’s record-seeking capital campaign.</p>
