--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
         </header>
-        <div id="article-header">   
+        <div id="article-header">  
             <h1 id="hmc-title" class="pt-serif">Has HMC Lost Its Edge?</h1>
 
             <p class="byline lora">By <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">CHRISTINE Y. CAHILL</a> and <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">MATTHEW Q. CLARIDA</a></p>
@@ -103,12 +103,12 @@
                         <p>As attacks become more sophisticated, however, HUIT may be forced to implement more rigorous security measures to protect the entire system from the vulnerabilities of a single computer. Any step taken to combat potential attacks must be weighed in the context of Harvard&#39;s greater mission as an institution of higher education.</p>
                         <p>&ldquo;This place should be open, and if security&#39;s getting in the way of me teaching, or you guys studying or doing whatever you want, then it&#39;s bad,&rdquo; Morrisett said. &ldquo;And I worry that we&#39;re swinging too much towards taking bureaucratic steps for compliance that don&#39;t really address real problems and yet get in the way of usability of the systems.&rdquo;</p>
 
-                        <p>&mdash;Staff writer <a target="_blank" href="http://www.thecrimson.com/writer/1209893/Dev_A._Patel/">Dev A. Patel</a> can be reached at dev.patel@thecrimson.com. Follow him on Twitter <a target="_blank" href="http://twitter.com/dev_a_patel">@dev_a_patel</a>.</p>
+                        <p>&mdash;Staff writer <a target="_blank" href="http://www.thecrimson.com/writer/1209926/Christine_Y.%20_Cahill/">Christine Y. Cahill</a> can be reached at christine.cahill@thecrimson.com. Follow her on Twitter <a target="_blank" href="https://twitter.com/cycahill16">@cycahill16</a>.</p>
 
-                        <p>&mdash;Staff writer <a target="_blank" href="http://www.thecrimson.com/writer/1208207/Samuel_Y._Weinstock/">Samuel Y. Weinstock</a> can be reached at weinstock@thecrimson.com. Follow him on Twitter <a target="_blank" href="http://twitter.com/syweinstock">@syweinstock</a>.</p>
+                        <p>&mdash;Staff writer <a target="_blank" href="http://www.thecrimson.com/writer/1210013/Matthew_Q._Clarida/">Matthew Q. Clarida</a> can be reached at matthew.clarida@thecrimson.com. Follow him on Twitter <a target="_blank" href="http://twitter.com/MattClarida">@MattClarida</a>.</p>
 
                     <div id="designer_signoff">
-                        Designed by Joseph R. Botros, Samuel M. Fishman, and Josh R. Palay.
+                        Designed by Tiffany Wu, Samuel M. Fishman, and Alex Patel.
                     </div>
 
                     </section>
