context quotes working in feature: quotes from matt are too long.

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -7,7 +7,9 @@
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <link href="../style.css" rel="stylesheet" type="text/css" />
-        <script src="../js/highcharts.js"></script>
+        <script src="../js/highcharts.js"></script>        
+        <script src="../js/scrollmagic.js"></script>
+        <script src="../js/TweenMax.min.js"></script>
         <script src="../js/hmc_graph.js"></script>
     </head>
 <body>
@@ -39,11 +41,11 @@
                 <div id="article-contents" class="white">
                     <section>
                         <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors. </p>
-                        <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the largest gift announced so far in the University’s record-seeking capital campaign.</p>
-                        <div class="context-quote-wrapper context-quote-right">
-                            <div class="context-quote-quote">
-                                <div class="context-quote-trigger"></div>
-                                <div class="context-quote-body">&ldquo;Founded in 1974, Harvard Management Company invests a significant portion of Harvard’s endowment with an in-house team of traders and managers based in the Boston Federal Reserve Building. HMC prides itself on being able to take positions in asset classes like private equity, natural resources, and real estate that may not be as accessible to smaller, externally-managed funds and which thus have the potential to generate an increased payout. &rdquo;</div>
+                        <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the largest gift announced so far in the University’s record-seeking capital 
+                        <div class="context-quote-wrapper context-quote-left">
+                        <div class="context-quote">
+                            <div class="context-quote-trigger"></div>
+                            <div class="context-quote-body">&ldquo;Founded in 1974, Harvard Management Company invests a significant portion of Harvard’s endowment with an in-house team of traders and managers based in the Boston Federal Reserve Building. HMC prides itself on being able to take positions in asset classes like private equity, natural resources, and real estate that may not be as accessible to smaller, externally-managed funds and which thus have the potential to generate an increased payout. &rdquo;</div>
                             </div>
                         </div>
                         <p>Mendillo has been credited with helping stave off disaster during the nadir of the global financial crisis in 2009, when HMC saw endowment returns of negative 27.3 percent. Each day during the recession, Mendillo convened her senior staff for a 7 a.m. crisis meeting. Today, with the meltdown in the rearview mirror, those meetings have ceased, and the endowment has started to recover. Although the fund is nearly $7 billion stronger than it was in 2009, Mendillo says the pressure of managing such a large endowment is constant.
@@ -66,9 +68,9 @@
                         <p>When Meyer arrived at HMC in 1990, he inherited a fledgling company designed to shepherd the investments of an endowment worth $4.7 billion. Over the next 14 fiscal years, Meyer more than tripled that figure, attaining celebrity status with University leaders and supporters. When he left his post in 2005, the endowment had grown to $25.9 billion. </p> 
 
                         <div class="context-quote-wrapper context-quote-right">
-                            <div class="context-quote-quote">
-                                <div class="context-quote-trigger"></div>
-                                <div class="context-quote-body">&ldquo;Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm. &rdquo;</div>
+                        <div class="context-quote">
+                            <div class="context-quote-trigger"></div>
+                            <div class="context-quote-body">&ldquo;Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm. &rdquo;</div>
                             </div>
                         </div>
 
