--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -45,7 +45,8 @@
                         <div class="context-quote-wrapper context-quote-left">
                         <div class="context-quote">
                             <div class="context-quote-trigger"></div>
-                            <div class="context-quote-body">&ldquo;Founded in 1974, Harvard Management Company invests a significant portion of Harvard’s endowment with an in-house team of traders and managers based in the Boston Federal Reserve Building. HMC prides itself on being able to take positions in asset classes like private equity, natural resources, and real estate that may not be as accessible to smaller, externally-managed funds and which thus have the potential to generate an increased payout. &rdquo;</div>
+                            <div class="context-quote-title">Harvard Management Company</div>
+                            <div class="context-quote-body">Founded in 1974, Harvard Management Company invests a significant portion of Harvard’s endowment with an in-house team of traders and managers based in the Boston Federal Reserve Building. HMC prides itself on being able to take positions in asset classes like private equity, natural resources, and real estate that may not be as accessible to smaller, externally-managed funds and which thus have the potential to generate an increased payout. </div>
                             </div>
                         </div>
                         <p>Mendillo has been credited with helping stave off disaster during the nadir of the global financial crisis in 2009, when HMC saw endowment returns of negative 27.3 percent. Each day during the recession, Mendillo convened her senior staff for a 7 a.m. crisis meeting. Today, with the meltdown in the rearview mirror, those meetings have ceased, and the endowment has started to recover. Although the fund is nearly $7 billion stronger than it was in 2009, Mendillo says the pressure of managing such a large endowment is constant.
@@ -70,7 +71,8 @@
                         <div class="context-quote-wrapper context-quote-right">
                         <div class="context-quote">
                             <div class="context-quote-trigger"></div>
-                            <div class="context-quote-body">&ldquo;Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm. &rdquo;</div>
+                            <div class="context-quote-title">Jack R. Meyer</div>
+                            <div class="context-quote-body">Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm. </div>
                             </div>
                         </div>
 
