modify context cards

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|PT+Serif:400,700,400italic,700italic|Inconsolata:400,700' rel='stylesheet' type='text/css'>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>HMC: Divesting from nothing since 1636</title>
+        <title>Has HMC Lost Its Edge? | Commencement 2014 | The Harvard Crimson</title>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <link href="../style.css" rel="stylesheet" type="text/css" />
@@ -38,7 +38,7 @@
         </div>
                 <div id="article-contents" class="white">
                     <section>
-                        <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors. </p>
+                        <p>Perched sixteen stories above street level in the Boston Federal Reserve Building, the office of Jane L. Mendillo offers majestic views of boats bobbing in Boston Harbor and planes touching down at Logan Airport. Sitting two levels above a bustling trading floor, Mendillo not only occupies one of the nicest offices at Harvard but, as CEO of Harvard Management Company, influences the University’s financial strength more than even the most celebrated Harvard donors.</p>
          
                         <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the <a target="_blank" href="http://www.thecrimson.com/article/2014/2/19/largest-gift-college-history/"> largest gift announced so far </a> in the University’s <a target="_blank" href="http://www.thecrimson.com/article/2013/9/22/faust-capital-campaign-launch/">record-seeking</a> capital campaign.</p>
 
@@ -47,17 +47,19 @@
 
                         <p>“It’s an extra challenge,” she said in her office in mid-May. “It’s a huge responsibility.” </p>
 
-                        
-
-                        <p>Yet since the crisis, HMC—in a shift away from record yields in the 1990s and early 2000s—has posted returns that have straddled the national average. In this new normal, a far cry from HMC’s early-2000s status as the envy of higher education, University leaders say HMC is fulfilling its charge of beating internally set benchmarks and holding more liquid assets in case another crisis hits. But as Harvard seeks to raise an ambitious $6.5 billion in its ongoing capital campaign, the numbers do not lie: HMC is not performing as well as it used to. </p>
-
                         <div class="context-quote-wrapper context-quote-left">
-                        <div class="context-quote">
-                            <div class="context-quote-trigger"></div>
-                            <div class="context-quote-title">Harvard Management Company</div>
-                            <div class="context-quote-body">Founded in 1974, Harvard Management Company invests a significant portion of Harvard’s endowment with an in-house team of traders and managers based in the Boston Federal Reserve Building. HMC prides itself on being able to take positions in asset classes like private equity, natural resources, and real estate that may not be as accessible to smaller, externally-managed funds and which thus have the potential to generate an increased payout. </div>
+                            <div class="context-quote">
+                                <div class="context-quote-trigger"></div>
+                                <div class="context-quote-header"><div class="context-quote-title context-quote-title-picless">Harvard Management Company</div></div>
+                                <div class="context-quote-body"><ul>
+                                    <li>Founded in 1974</li>
+                                    <li>Invests a significant portion of Harvard’s endowment with an in-house team</li>
+                                    <li>Based in the Boston Federal Reserve Building</li> 
+                                    <li>Takes positions in asset classes like private equity, natural resources, and real estate less accessible to smaller funds</li></ul></div>
                             </div>
                         </div>
+
+                        <p>Yet since the crisis, HMC—in a shift away from record yields in the 1990s and early 2000s—has posted returns that have straddled the national average. In this new normal, a far cry from HMC’s early-2000s status as the envy of higher education, University leaders say HMC is fulfilling its charge of beating internally set benchmarks and holding more liquid assets in case another crisis hits. But as Harvard seeks to raise an ambitious $6.5 billion in its ongoing capital campaign, the numbers do not lie: HMC is not performing as well as it used to. </p>
                     </section>
                     <section>
                         <h2 class="pt-serif">THE GOLDEN YEARS: JACK MEYER AND THE ‘YALE MODEL’ </h2>
@@ -74,7 +76,10 @@
                         <div class="context-quote-wrapper context-quote-right">
                         <div class="context-quote">
                             <div class="context-quote-trigger"></div>
-                            <div class="context-quote-title">Jack R. Meyer </div>
+                            <div class="context-quote-header">
+                                <img src="../assets/img/meyer.jpg">
+                                <div class="context-quote-title">Jack R. Meyer </div>
+                            </div>
                             <div class="context-quote-body">Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm.</div>
                             </div>
                         </div>
