styles for context

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -42,15 +42,10 @@
          
                         <p>At HMC, the stakes are high. Tasked with managing the largest endowment in higher education—valued at $32.7 billion as of July 2013—HMC’s managers operate with the knowledge that even the smallest margins translate to millions of dollars. To put it another way: a difference of a single percent in annual returns at HMC represents an amount—nearly $330 million—that is more than twice the size of the <a target="_blank" href="http://www.thecrimson.com/article/2014/2/19/largest-gift-college-history/"> largest gift announced so far </a> in the University’s <a target="_blank" href="http://www.thecrimson.com/article/2013/9/22/faust-capital-campaign-launch/">record-seeking</a> capital campaign.</p>
 
-
-                        <p><a target="_blank" href="http://www.thecrimson.com/article/2011/5/26/mendillo-hmc-meyer-endowment/">Mendillo has been credited</a> with helping stave off disaster during the nadir of the global financial crisis in 2009, when HMC saw endowment returns of negative 27.3 percent. Each day during the recession, Mendillo <a target="_blank" href="http://www.thecrimson.com/article/2011/5/26/mendillo-hmc-meyer-endowment/?page=single">convened</a> her senior staff for a 7 a.m. crisis meeting. Today, with the meltdown in the rearview mirror, those meetings have ceased, and the endowment has started to recover. Although the fund is nearly $7 billion stronger than it was in 2009, Mendillo says the pressure of managing such a large endowment is constant. </p>
-
-                        <p>“It’s an extra challenge,” she said in her office in mid-May. “It’s a huge responsibility.” </p>
-
                         <div class="context-quote-wrapper context-quote-left">
                             <div class="context-quote">
                                 <div class="context-quote-trigger"></div>
-                                <div class="context-quote-header"><div class="context-quote-title context-quote-title-picless">Harvard Management Company</div></div>
+                                <div class="context-quote-header"><div class="context-quote-title context-quote-title-picless"><div>Harvard Management Company</div></div></div>
                                 <div class="context-quote-body"><ul>
                                     <li>Founded in 1974</li>
                                     <li>Invests a significant portion of Harvard’s endowment with an in-house team</li>
@@ -58,7 +53,11 @@
                                     <li>Takes positions in asset classes like private equity, natural resources, and real estate less accessible to smaller funds</li></ul></div>
                             </div>
                         </div>
-                        
+
+                        <p><a target="_blank" href="http://www.thecrimson.com/article/2011/5/26/mendillo-hmc-meyer-endowment/">Mendillo has been credited</a> with helping stave off disaster during the nadir of the global financial crisis in 2009, when HMC saw endowment returns of negative 27.3 percent. Each day during the recession, Mendillo <a target="_blank" href="http://www.thecrimson.com/article/2011/5/26/mendillo-hmc-meyer-endowment/?page=single">convened</a> her senior staff for a 7 a.m. crisis meeting. Today, with the meltdown in the rearview mirror, those meetings have ceased, and the endowment has started to recover. Although the fund is nearly $7 billion stronger than it was in 2009, Mendillo says the pressure of managing such a large endowment is constant. </p>
+
+                        <p>“It’s an extra challenge,” she said in her office in mid-May. “It’s a huge responsibility.” </p>
+
                         <p>Yet since the crisis, HMC—in a shift away from record yields in the 1990s and early 2000s—has posted returns that have straddled the national average. In this new normal, a far cry from HMC’s early-2000s status as the envy of higher education, University leaders say HMC is fulfilling its charge of beating internally set benchmarks and holding more liquid assets in case another crisis hits. But as Harvard seeks to raise an ambitious $6.5 billion in its ongoing capital campaign, the numbers do not lie: HMC is not performing as well as it used to. </p>
                     </section>
                     <section>
@@ -80,7 +79,7 @@
                             <div class="context-quote-trigger"></div>
                             <div class="context-quote-header">
                                 <img src="../assets/img/meyer.jpg">
-                                <div class="context-quote-title">Jack R. Meyer </div>
+                                <div class="context-quote-title"><div>Jack R. Meyer</div></div>
                             </div>
                             <div class="context-quote-body">Jack R. Meyer led HMC from 1990 until September 2005, increasing the size of the endowment more than five times over and leaving it with a value of $25.9 billion. Though he approached celebrity status with some prominent University donors and leaders, Meyer sparked a controversy with the lavish sums he paid his top managers, who could earn more than $30 million in a single year. Meyer was so instrumental to Harvard’s endowment management that some thought that his departure would spell the end of Harvard investing the endowment with through an in-house arm.</div>
                             </div>
@@ -116,7 +115,7 @@
                         <div class="context-quote-wrapper context-quote-left">
                         <div class="context-quote">
                             <div class="context-quote-trigger"></div>
-                            <div class="context-quote-title">Mohamed A. El-Erian</div>
+                            <div class="context-quote-header"><img src=""><div class="context-quote-title"><div>Mohamed A. El-Erian</div></div></div>
                             <div class="context-quote-body">Mohamed El-Erian is the shortest-termed permanent CEO and President of HMC since the company’s founding in 1974. Named in October of 2005, El-Erian took the reins in early 2006 and left at the end of 2007. In his only full fiscal year in charge, El-Erian generated a return of 23 percent. He departed to return to the California investment management firm where he worked before coming to HMC. His short tenure—the brevity of which was hardly expected by University leadership—created disarray at the top of HMC and has been blamed with contributing to disorganization at the company which flamed up during the financial crisis. </div>
                             </div>
                         </div>
@@ -154,7 +153,7 @@
                         <div class="context-quote-wrapper context-quote-right">
                         <div class="context-quote">
                             <div class="context-quote-trigger"></div>
-                            <div class="context-quote-title">Jane L. Mendillo</div>
+                            <div class="context-quote-header"><img src=""><div class="context-quote-title"><div>Jane L. Mendillo</div></div></div>
                             <div class="context-quote-body">Jane L. Mendillo is the President and Chief Executive Officer of Harvard Management Company. Mendillo has led HMC since July 1, 2008. Before that, she managed the endowment of Wellesley College from 2002-2008 and was a manager at HMC from 1987-2001. Mendillo did her undergraduate work at Yale and holds an MBA from Yale’s School of Management. Mendillo has also worked in Yale’s investment office and at Bain and Company</div>
                             </div>
                         </div>
