added smooth navigation javascript

--- a/HMC graph/HMC graph.html
+++ b/HMC graph/HMC graph.html
@@ -21,12 +21,12 @@
                     <img src="../assets/img/logo.png" height="18" width="215">
                 </a>
                 <ul class="header-nav">
-                    <a href="#featured"><li>Featured</li></a>
-                    <a href="#levity"><li>Levity</li></a>
-                    <a href="#around-town"><li>Around Town</li></a>
-                    <a href="#conversations"><li>Conversations</li></a>
-                    <a href="#Endpapers"><li>Endpapers</li></a>
-                    <a href="#editors-note"><li>Editors&rsquo; Note</li></a>
+                    <a class='.navlink' href="#featured"><li>Featured</li></a>
+                    <a class='.navlink' href="#levity"><li>Levity</li></a>
+                    <a class='.navlink' href="#around-town"><li>Around Town</li></a>
+                    <a class='.navlink' href="#conversations"><li>Conversations</li></a>
+                    <a class='.navlink' href="#Endpapers"><li>Endpapers</li></a>
+                    <a class='.navlink' href="#editors-note"><li>Editors&rsquo; Note</li></a>
                 </ul>
             </div>
         </header>
